# mybox-cpo-test

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  README.md  TASK.md  docker-compose.yml
.claude/: settings.json
.claude/agents/: e2e-runner.md
.claude/commands/: verify-phase.md
backend/: Dockerfile  __main__.py  app.py  config.py  pyproject.toml
backend/adapters/: __init__.py  mqtt_adapter.py  rest_api.py  sse.py
backend/db/: engine.py  models.py  schema.py
backend/domain/: events.py  pricing.py  session_service.py
docs/: architektura.md  phase-8-ui-checklist.md
frontend/: Dockerfile  index.html  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: apiClient.ts
frontend/src/components/: PowerChart.tsx  StatusBadge.tsx
frontend/src/hooks/: useSSE.ts  useStationDetail.ts  useStationSessions.ts  useStationsLive.ts
frontend/src/pages/: DashboardPage.tsx  SessionsPage.tsx  StationDetailPage.tsx
frontend/src/utils/: formatTime.ts
mosquitto/config/: mosquitto.conf
scripts/hooks/: guard-destructive.sh
scripts/verify/: README.md  _lib.sh  docker-compose.verify.yml  phase-1-broker.sh  phase-2-simulator.sh  phase-3-domain.sh  phase-4-mqtt.sh  phase-5-rest.sh  phase-6-frontend.sh  phase-7-compose.sh  phase-8-e2e.sh
simulator/: Dockerfile  __main__.py  config.py  instance.py  pyproject.toml  state_machine.py
