[project]
name = "cpo-backend"
version = "0.1.0"
description = "Backend for the Mini CPO Platform — domain layer, DB schema, MQTT/REST adapters"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136,<0.137",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncpg>=0.30,<0.31",
    "uvicorn>=0.34,<0.40",
    "pydantic>=2.0,<3.0",
    # MQTT adapter (Phase 4) — pure-Python paho wrapper, same client as the
    # simulator. Alternative paho-mqtt would need manual asyncio bridging.
    "aiomqtt>=2.4,<3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["backend", "backend.domain", "backend.db", "backend.adapters"]

[tool.ruff]
line-length = 88
target-version = "py313"
