[project]
name = "cpo-station-simulator"
version = "0.1.0"
description = "EV charging station simulator for the Mini CPO Platform"
requires-python = ">=3.14"
# aiomqtt ^2.4 is the only non-stdlib dependency (architektura 2).
dependencies = ["aiomqtt>=2.4,<3.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["simulator"]

[tool.ruff]
line-length = 88
target-version = "py313"
